# standard

./: .gitignore  Cargo.toml  LICENSE  README.adoc  WORKSPACE
.github/workflows/: build.yml
cargo/: crates.bzl
cargo/remote/: BUILD.atty-0.2.14.bazel  BUILD.clap-3.0.0-beta.2.bazel  BUILD.clap_derive-3.0.0-beta.2.bazel  BUILD.hermit-abi-0.1.17.bazel  BUILD.libc-0.2.82.bazel  BUILD.log-0.3.6.bazel  BUILD.os_str_bytes-2.4.0.bazel  BUILD.proc-macro-error-1.0.4.bazel  BUILD.proc-macro-error-attr-1.0.4.bazel  BUILD.strsim-0.10.0.bazel  BUILD.syn-1.0.58.bazel  BUILD.textwrap-0.12.1.bazel  BUILD.vec_map-0.8.2.bazel  BUILD.winapi-0.3.9.bazel
standard-cli/: BUILD.bazel  Cargo.toml
standard-cli/src/: main.rs
