[workspace]
members = [
    "standard-cli",
]

[workspace.metadata.raze]
workspace_path = "//cargo"
experimental_api = true
default_gen_buildrs = true
package_aliases_dir = "cargo"
render_package_aliases = false
rust_rules_workspace_name = "io_bazel_rules_rust"
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
genmode = "Remote"
