load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary")
load("//cargo:crates.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "std",
    srcs = ["src/main.rs"],
    edition = "2018",
    deps = all_crate_deps(normal = True, proc_macro = False, package_name = "/standard-cli"),
    proc_macro_deps = all_crate_deps(normal = False, proc_macro = True, package_name = "/standard-cli"),
)